* Adjusted formatting * Added nowrap to announcement topic in announcer to prevent long topics from over bloating the view

--- a/muikku/src/main/webapp/resources/theme-muikku/sass/_announcer.scss
+++ b/muikku/src/main/webapp/resources/theme-muikku/sass/_announcer.scss
@@ -69,34 +69,38 @@
   text-overflow:ellipsis;  
   color:#000;
   border-bottom:1px solid #eee;
+  white-space:nowrap;
 }
+
 .an-announcement-content{
   padding:5px 10px 10px 10px; 
   max-height:130px;
   overflow:hidden;
   text-overflow:ellipsis;
 }
+
 .an-no-announcements{}
 
 .an-create-announcement{}
 
 .an-textfield{
    width:100%;  
-  
 }
+
 .an-archiving-container{
   width:100%; 
 }
 
 .an-archiving-ids-container{
   padding:15px;
-  span{
+  
+  span {
    background-color:$dim;
    padding:5px;
   }
+  
   span:not(:first-child){
    margin-left:5px;
-
   } 
  
 }
